<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/contactar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="100"
        android:title="@string/terminos_condiciones"
        app:showAsAction="never" />
</menu>
