<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:animateLayoutChanges="true"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="69dp"
                    android:layout_height="57dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="154dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="148dp"
                    android:transitionName="imageTransition"
                    android:src="@drawable/ic_adminnegsolo" />

                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text" />

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_ico_email"
                            android:hint="@string/email" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password" />

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_ico_lock"
                            android:hint="@string/password" />

                        <Button
                            android:id="@+id/btLogin"
                            style="@style/MiBoton"
                            android:layout_marginTop="5dp"
                            android:focusable="auto"
                            android:text="@string/sign_in" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_margin="20dp"
                    android:text="@string/have_not_an_account"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>