<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.SignUp2Activity">
    <!--- android:animateLayoutChanges="true" activar las animaciones -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="40dp"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_adminnegsolo"
                        />

                    <TextView
                        android:id="@+id/tvTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imgLogo"
                        android:layout_centerHorizontal="true"
                        android:text="@string/sign_up2"
                        android:textColor="?attr/textcolor"
                        android:textSize="18sp"
                         />
                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitulo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_ico_email"
                            android:hint="@string/email" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password" />

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_ico_lock"
                            android:hint="@string/password" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="74dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <Button
                                android:id="@+id/btAnterior"
                                style="@style/MiBotonFlat"
                                android:layout_width="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:text="@string/anterior" />

                            <Button
                                android:id="@+id/btSiguiente"
                                style="@style/MiBotonFlat"
                                android:layout_width="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:text="@string/siguiente" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_below="@+id/cardView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/have_an_account"
                    android:textColor="?attr/textcolor" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>